...
    <string name="tool_redact">Redact</string>
    <string name="tool_links">Links</string>
    <string name="tool_add_link">Add link</string>
    <string name="tool_move_earlier">Move earlier</string>
    <string name="tool_move_later">Move later</string>
    <string name="tool_rotate">Rotate</string>
    <string name="tool_crop">Crop</string>
    <string name="tool_delete">Delete</string>
    <string name="tool_insert">Insert blank</string>
    <string name="tool_extract">Extract</string>
    <string name="tool_merge">Merge</string>
    <string name="tool_select_all">Select all</string>
    <string name="tool_share_selected">Share selected</string>
...
